--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,4 +1,61 @@
-.loginlink {
+@media (min-width: 320px) {
+  .loginlink {
+    border-radius: 30px;
+    padding: 12px 66px;
+    width: 178px;
+    height: 42px;
+    background: #f6b83d;
+
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #fff;
+  }
+
+  .reglink {
+    border-radius: 30px;
+    padding: 12px 41px;
+    width: 178px;
+    height: 42px;
+    background: #fff4df;
+
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #f6b83d;
+  }
+}
+
+@media (min-width: 768px) {
+  .loginlink {
+    padding: 15px 35px;
+    width: 119px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .reglink {
+    padding: 15px 20px;
+    width: 149px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+}
+
+@media (min-width: 1280px) {
+}
+
+/* .loginlink {
   border-radius: 30px;
   padding: 15px 35px;
   width: 119px;
@@ -28,4 +85,4 @@
   letter-spacing: -0.03em;
   text-transform: uppercase;
   color: #f6b83d;
-}
+} */
