--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,29 +1,179 @@
-.active {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 125%;
-  letter-spacing: -0.03em;
-  color: #262626;
+@media (min-width: 320px) {
+  .newsActive {
+    border: 1px solid #f6b83d;
+    border-radius: 30px;
+    padding: 15px 39px;
+    width: 119px;
+    height: 48px;
 
-  border: 1px solid #f6b83d;
-  border-radius: 30px;
-  padding: 15px 20px;
-  width: 80px;
-  height: 50px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .newsNotActive {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 15px 39px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .findpetActive {
+    border: 1px solid #f6b83d;
+    border-radius: 30px;
+    padding: 15px 31px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .findpetNotActive {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 15px 31px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .friendsActive {
+    border: 1px solid #f6b83d;
+    border-radius: 30px;
+    padding: 15px 22px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .friendsNotActive {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 15px 22px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
 }
 
-.notActive {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 125%;
-  letter-spacing: -0.03em;
-  color: #262626;
+@media (min-width: 768px) {
+  .newsActive {
+    padding: 15px 40px;
+    width: 120px;
+    height: 50px;
 
-  border: 1px solid rgba(38, 38, 38, 0.15);
-  border-radius: 30px;
-  padding: 15px 20px;
-  width: 80px;
-  height: 50px;
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .newsNotActive {
+    padding: 15px 40px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .findpetActive {
+    padding: 15px 32px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .findpetNotActive {
+    padding: 15px 32px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .friendsActive {
+    padding: 15px 21px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .friendsNotActive {
+    padding: 15px 21px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .newsActive {
+    padding: 15px 20px;
+    width: 80px;
+  }
+
+  .newsNotActive {
+    padding: 15px 20px;
+    width: 80px;
+  }
+
+  .findpetActive {
+    padding: 15px 20px;
+    width: 97px;
+  }
+
+  .findpetNotActive {
+    padding: 15px 20px;
+    width: 97px;
+  }
+
+  .friendsActive {
+    padding: 15px 20px;
+    width: 119px;
+  }
+
+  .friendsNotActive {
+    padding: 15px 20px;
+    width: 119px;
+  }
 }
