--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -16,3 +16,12 @@
   letter-spacing: -0.03em;
   color: #262626;
 }
+
+@media (min-width: 320px) {
+}
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 1280px) {
+}
