--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -1,8 +1,20 @@
+.user-nav {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
 @media (min-width: 320px) {
+  .user-nav-logout-mob {
+    display: none;
+  }
 }
 
 @media (min-width: 768px) {
 }
 
 @media (min-width: 1280px) {
+  .user-nav-logout-mob {
+    display: block;
+  }
 }
