--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body {
+  padding: 10px 20px;
+}
+
+@media (min-width: 768px) {
+  body {
+    padding: 16px 32px;
+  }
+}
+
+@media (min-width: 1280px) {
+  body {
+    padding: 16px 32px;
+  }
+}
