--- a/src/components/LogOutBtn/LogOut.module.css
+++ b/src/components/LogOutBtn/LogOut.module.css
@@ -1,7 +1,8 @@
 .logoutBtn {
+  border: 1px solid #fff;
   border-radius: 30px;
   padding: 15px 35px;
-  width: 136px;
+  width: 137px;
   height: 50px;
   background: #f6b83d;
 
@@ -15,6 +16,7 @@
 }
 
 .logoutBtn:hover {
+  border: 1px solid #fff;
   transition-duration: 300ms;
   transition-delay: 100ms;
   background: #f9ca6c;
