--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,3 +1,19 @@
+.nav {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.nav-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
+  height: 165px;
+  width: 130px;
+}
+
 @media (min-width: 320px) {
   .newsActive {
     border: 1px solid #f6b83d;
@@ -15,6 +31,36 @@
   }
 
   .newsNotActive {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 15px 39px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .news-home {
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 30px;
+    padding: 15px 39px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #fff;
+  }
+
+  .news-home-modal {
     border: 1px solid rgba(38, 38, 38, 0.15);
     border-radius: 30px;
     padding: 15px 39px;
@@ -59,6 +105,36 @@
     color: #262626;
   }
 
+  .findpet-home {
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 30px;
+    padding: 15px 31px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #fff;
+  }
+
+  .findpet-home-modal {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 15px 31px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
   .friendsActive {
     border: 1px solid #f6b83d;
     border-radius: 30px;
@@ -75,6 +151,36 @@
   }
 
   .friendsNotActive {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 15px 22px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .friends-home {
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 30px;
+    padding: 15px 22px;
+    width: 119px;
+    height: 48px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #fff;
+  }
+
+  .friends-home-modal {
     border: 1px solid rgba(38, 38, 38, 0.15);
     border-radius: 30px;
     padding: 15px 22px;
@@ -109,6 +215,24 @@
     line-height: 125%;
   }
 
+  .news-home {
+    padding: 15px 40px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .news-home-modal {
+    padding: 15px 40px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
   .findpetActive {
     padding: 15px 32px;
     width: 120px;
@@ -127,6 +251,24 @@
     line-height: 125%;
   }
 
+  .findpet-home {
+    padding: 15px 32px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .findpet-home-modal {
+    padding: 15px 32px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
   .friendsActive {
     padding: 15px 21px;
     width: 120px;
@@ -137,6 +279,24 @@
   }
 
   .friendsNotActive {
+    padding: 15px 21px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .friends-home {
+    padding: 15px 21px;
+    width: 120px;
+    height: 50px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .friends-home-modal {
     padding: 15px 21px;
     width: 120px;
     height: 50px;
@@ -157,6 +317,16 @@
     width: 80px;
   }
 
+  .news-home {
+    padding: 15px 20px;
+    width: 80px;
+  }
+
+  /* .news-home-modal {
+    padding: 15px 20px;
+    width: 80px;
+  } */
+
   .findpetActive {
     padding: 15px 20px;
     width: 97px;
@@ -167,6 +337,16 @@
     width: 97px;
   }
 
+  .findpet-home {
+    padding: 15px 20px;
+    width: 97px;
+  }
+
+  /* .findpet-home-modal {
+    padding: 15px 20px;
+    width: 97px;
+  } */
+
   .friendsActive {
     padding: 15px 20px;
     width: 119px;
@@ -176,4 +356,14 @@
     padding: 15px 20px;
     width: 119px;
   }
+
+  .friends-home {
+    padding: 15px 20px;
+    width: 119px;
+  }
+
+  /* .friends-home-modal {
+    padding: 15px 20px;
+    width: 119px;
+  } */
 }
