Done home page and start forms on login and register path

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -5,11 +5,11 @@
 
 .main-background {
   margin: -16px -35px;
-  background-position: center; /* Центрирование фона */
-  background-clip: border-box; /* Разрешите отображение по всей области */
-  background-size: cover; /* Масштабирование */
+  background-position: center;
+  background-clip: border-box;
+  background-size: cover;
   height: 100vh;
-  z-index: -1;
+
   background-image: image-set(
     url("/public/background-image-mob1x.jpg") 1x,
     url("/public/background-image-mob2x.jpg") 2x
@@ -18,11 +18,6 @@
 
 @media (min-width: 768px) {
   .main-background {
-    background-position: center; /* Центрирование фона */
-    background-clip: border-box; /* Разрешите отображение по всей области */
-    background-size: cover; /* Масштабирование */
-    height: 100vh;
-    z-index: -1;
     background-image: image-set(
       url("/public/background-image-tablet1x.jpg") 1x,
       url("/public/background-image-tablet2x.jpg") 2x
@@ -32,11 +27,6 @@
 
 @media (min-width: 1280px) {
   .main-background {
-    background-position: center; /* Центрирование фона */
-    background-clip: border-box; /* Разрешите отображение по всей области */
-    background-size: cover; /* Масштабирование */
-    height: 100vh;
-    z-index: -1;
     background-image: image-set(
       url("/public/background-image1x.jpg") 1x,
       url("/public/background-image2x.jpg") 2x
