--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,52 +1,279 @@
-.inputs-box {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+@media (max-width: 374px) {
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .inputs-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .inputs-box-error {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+  }
+
+  .register-input {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 240px;
+    height: 42px;
+    transition: border 0.3s ease;
+  }
+
+  .register-input-error {
+    border: 1px solid red;
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 240px;
+    height: 42px;
+    transition: border 0.3s ease;
+  }
+
+  .reg-btn {
+    border-radius: 30px;
+    padding: 12px 78px;
+    width: 240px;
+    height: 42px;
+    background: #f6b83d;
+
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #fff;
+  }
+
+  .reg-btn:hover {
+    transition-duration: 300ms;
+    transition-delay: 100ms;
+    background: #f9ca6c;
+  }
+
+  .reg-btn:disabled {
+    background: #fae1af;
+  }
+
+  .navlink {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: -0.03em;
+    color: rgba(38, 38, 38, 0.5);
+  }
+
+  .span {
+    font-weight: 700;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #f6b83d;
+  }
+
+  .btn-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+
+  .error {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 120%;
+    letter-spacing: -0.03em;
+    color: #ef2447;
+  }
 }
 
-.register-input {
-  border: 1px solid rgba(38, 38, 38, 0.15);
-  border-radius: 30px;
-  padding: 12px 12px 12px 12px;
-  width: 295px;
-  height: 42px;
+@media (min-width: 375px) {
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .inputs-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .inputs-box-error {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+  }
+
+  .register-input {
+    border: 1px solid rgba(38, 38, 38, 0.15);
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 295px;
+    height: 42px;
+    transition: border 0.3s ease;
+  }
+
+  .register-input-error {
+    border: 1px solid red;
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 295px;
+    height: 42px;
+    transition: border 0.3s ease;
+  }
+
+  .reg-btn {
+    border-radius: 30px;
+    padding: 12px 99px;
+    width: 295px;
+    height: 42px;
+    background: #f6b83d;
+
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #fff;
+  }
+
+  .reg-btn:hover {
+    transition-duration: 300ms;
+    transition-delay: 100ms;
+    background: #f9ca6c;
+  }
+
+  .reg-btn:disabled {
+    background: #fae1af;
+  }
+
+  .navlink {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: -0.03em;
+    color: rgba(38, 38, 38, 0.5);
+  }
+
+  .span {
+    font-weight: 700;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #f6b83d;
+  }
+
+  .btn-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+
+  .error {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 120%;
+    letter-spacing: -0.03em;
+    color: #ef2447;
+  }
 }
 
-.reg-btn {
-  border-radius: 30px;
-  padding: 12px 99px;
-  width: 295px;
-  height: 42px;
-  background: #f6b83d;
+@media (min-width: 768px) {
+  .form {
+    gap: 32px;
+  }
 
-  font-family: var(--font-family);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 129%;
-  letter-spacing: -0.03em;
-  text-transform: uppercase;
-  color: #fff;
+  .inputs-box {
+    gap: 16px;
+  }
+
+  .inputs-box-error {
+  }
+
+  .register-input {
+    padding: 16px 16px 16px 16px;
+    width: 424px;
+    height: 52px;
+  }
+
+  .register-input-error {
+    padding: 16px 16px 16px 16px;
+    width: 424px;
+    height: 52px;
+  }
+
+  .reg-btn {
+    padding: 16px 157px;
+    width: 424px;
+    height: 52px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .navlink {
+    font-size: 14px;
+    line-height: 143%;
+  }
+
+  .span {
+  }
+
+  .btn-box {
+    gap: 16px;
+  }
+
+  .error {
+    font-size: 12px;
+    line-height: 117%;
+  }
 }
 
-.navlink {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 117%;
-  letter-spacing: -0.03em;
-  color: rgba(38, 38, 38, 0.5);
-}
+@media (min-width: 1280px) {
+  .form {
+  }
 
-.span {
-  font-weight: 700;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-  color: #f6b83d;
-}
+  .inputs-box {
+  }
 
-.btn-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
+  .inputs-box-error {
+    gap: 5px;
+  }
+
+  .register-input {
+  }
+
+  .register-input-error {
+  }
+
+  .reg-btn {
+  }
+
+  .navlink {
+  }
+
+  .span {
+  }
+
+  .btn-box {
+  }
+
+  .error {
+  }
 }
