--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -40,6 +40,9 @@
 
 @media (min-width: 768px) {
   .news-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 85px 32px 80px 32px;
   }
 
@@ -48,7 +51,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    gap: unset;
+    gap: 337px;
   }
 
   .list {
@@ -62,6 +65,7 @@
   }
 
   .title-and-search {
+    gap: 785px;
   }
 
   .list {
