--- a/src/components/FriendsItem/FriendsItem.module.css
+++ b/src/components/FriendsItem/FriendsItem.module.css
@@ -165,6 +165,19 @@
     letter-spacing: -0.02em;
     color: #262626;
   }
+
+  .contact-value:hover {
+    text-decoration: underline;
+  }
+
+  .only {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.02em;
+    color: #262626;
+  }
 }
 
 @media (min-width: 768px) {
