--- a/src/components/SearchField/SearchField.module.css
+++ b/src/components/SearchField/SearchField.module.css
@@ -21,13 +21,21 @@
     border: 1px solid #f6b83d;
   }
 
-  .search-icon {
+  .loop-and-cross {
     position: absolute;
-    left: 88%;
+    display: flex;
+    gap: 5px;
+    left: 80%;
     top: 28%;
+  }
+
+  .search-icon {
     width: 18px;
     height: 18px;
     cursor: pointer;
+  }
+
+  .search-icon-btn {
   }
 
   .search-icon:hover {
@@ -36,13 +44,14 @@
   }
 
   .red-cross {
-    position: absolute;
-    left: 88%;
-    top: 28%;
     width: 20px;
     height: 20px;
     cursor: pointer;
     color: #ef2447;
+  }
+
+  .red-cross-btn {
+    visibility: hidden;
   }
 
   .red-cross:hover {
@@ -61,6 +70,14 @@
     background: transparent;
   }
 
+  .search-notices {
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 295px;
+    height: 42px;
+    background: #fff;
+  }
+
   .search::placeholder {
     font-family: var(--font-family);
     font-weight: 500;
@@ -70,17 +87,42 @@
     color: rgba(38, 38, 38, 0.5);
   }
 
+  .search-notices::placeholder {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
   .search:hover {
     border: 1px solid #f6b83d;
   }
 
-  .search-icon {
+  .loop-and-cross {
     position: absolute;
-    left: 90%;
-    top: 32%;
+    display: flex;
+    gap: 5px;
+    left: 84%;
+    top: 31%;
+  }
+
+  .loop-and-cross-notices {
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    left: 82%;
+    top: 31%;
+  }
+
+  .search-icon {
     width: 18px;
     height: 18px;
     cursor: pointer;
+  }
+
+  .search-icon-btn {
   }
 
   .search-icon:hover {
@@ -88,10 +130,11 @@
     transition: color 0.3s ease;
   }
 
+  .red-cross-btn {
+    visibility: hidden;
+  }
+
   .red-cross {
-    position: absolute;
-    left: 90%;
-    top: 32%;
     width: 20px;
     height: 20px;
     cursor: pointer;
@@ -111,20 +154,45 @@
     height: 48px;
   }
 
+  .search-notices {
+    padding: 14px 14px 14px 14px;
+    width: 265px;
+    height: 48px;
+  }
+
   .search::placeholder {
     font-size: 16px;
     line-height: 125%;
   }
 
+  .search-notices::placeholder {
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .loop-and-cross {
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    left: 76%;
+    top: 32%;
+  }
+
+  .loop-and-cross-notices {
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    left: 71%;
+    top: 31%;
+  }
+
   .search-icon {
-    left: 86%;
   }
 
   .search-icon:hover {
   }
 
   .red-cross {
-    left: 86%;
   }
 
   .red-cross:hover {
@@ -136,6 +204,9 @@
   }
 
   .search::placeholder {
+  }
+
+  .loop-and-cross {
   }
 
   .search-icon {
