--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -6,7 +6,7 @@
     padding: 20px 20px 20px 20px;
     border-radius: 30px;
     width: 335px;
-    height: 378px;
+    /* height: 378px; */
     background: #fff4df;
   }
 
@@ -198,9 +198,64 @@
     display: none;
   }
 
+  /* .hidden-btns {
+    height: 0;
+    opacity: 0;
+    transition: height 0.5s ease, opacity 0.5s ease;
+  }
+
+  .hidden-btns-active {
+    display: inline-block;
+    height: auto;
+    opacity: 1;
+    transition: all 1s ease;
+  } */
+
   .cross {
     width: 18px;
     height: 18px;
+  }
+
+  .apply-reset {
+    display: flex;
+    gap: 10px;
+  }
+
+  .apply-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    padding: 10px;
+    gap: 5px;
+    border-radius: 30px;
+    border: 1px solid transparent;
+    height: 30px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .apply-btn:hover {
+    border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
+    /* transform: scale(1.05); */
+  }
+
+  .red-cross {
+    width: 20px;
+    height: 20px;
+    color: red;
+  }
+
+  .green-check {
+    width: 20px;
+    height: 20px;
+    color: green;
   }
 }
 
