--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -1,4 +1,255 @@
 @media (max-width: 374px) {
+  .form {
+    padding: 20px 20px 20px 20px;
+    border-radius: 30px;
+    width: 280px;
+    /* height: 378px; */
+    background: #fff4df;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .category-gender {
+    display: flex;
+    gap: 6px;
+  }
+
+  .select-inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 240px;
+    height: 42px;
+    background: #fff;
+    border: 1px solid transparent;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .select-inputs:hover {
+    border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
+  }
+
+  .select-inputs-mob {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 120px;
+    height: 42px;
+    background: #fff;
+    border: 1px solid transparent;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .select-inputs-mob:hover {
+    border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
+  }
+
+  .hr {
+    background: rgba(38, 38, 38, 0.1);
+    margin: 15px 0 15px 0;
+    height: 0.5px;
+  }
+
+  .select-wrapper {
+    position: relative;
+    /* display: inline-block; */
+  }
+
+  .select-dropdown {
+    width: 240px;
+    height: 150px;
+
+    position: absolute;
+    z-index: 1000;
+    top: 5px;
+    right: 12px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: baseline;
+
+    overflow-y: auto;
+
+    border-radius: 15px;
+    border: 1px solid #ced4da;
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .select-dropdown-mob {
+    width: 120px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 1000;
+    right: 12px;
+    top: 5px;
+
+    border-radius: 15px;
+
+    border: 1px solid #ced4da;
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .select-option {
+    padding: 10px;
+    cursor: pointer;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: rgba(38, 38, 38, 0.6);
+  }
+
+  .select-option:hover {
+    background-color: #e9ecef;
+  }
+
+  .select-option-active {
+    padding: 10px;
+    cursor: pointer;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #f6b83d;
+  }
+
+  .checkbox-button {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+
+  .checkbox-button input[type="checkbox"] {
+    display: none; /* Скрываем чекбокс */
+  }
+
+  .checkbox-button label {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    border-radius: 30px;
+    padding: 12px;
+    height: 42px;
+    background-color: #fff;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+    border: 1px solid transparent;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.5s, color 0.5s, transform 0.5s;
+  }
+
+  .checkbox-button input[type="checkbox"]:checked + label {
+    background-color: #f6b83d;
+    color: #fff;
+    transform: scale(1.05);
+  }
+
+  .checkbox-button input[type="checkbox"]:disabled + label {
+    background-color: lightgrey;
+    border: 1px solid transparent;
+    color: #fff;
+  }
+
+  .checkbox-button label:hover {
+    border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
+  }
+
+  .checkbox-button label:active {
+    background-color: #f6b83d;
+    transition: all 0.5s ease;
+  }
+
+  .checkbox-button label span {
+    /* margin-right: 8px; */
+  }
+  .checkbox-button input[type="checkbox"]:not(:checked) + label span {
+    display: none;
+  }
+
+  .cross {
+    width: 18px;
+    height: 18px;
+  }
+
+  .apply-reset {
+    display: flex;
+    gap: 10px;
+  }
+
+  .apply-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    padding: 10px;
+    gap: 5px;
+    border-radius: 30px;
+    border: 1px solid transparent;
+    height: 30px;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
+  .apply-btn:hover {
+    border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
+    /* transform: scale(1.05); */
+  }
+
+  .red-cross {
+    width: 20px;
+    height: 20px;
+    color: red;
+  }
+
+  .green-check {
+    width: 20px;
+    height: 20px;
+    color: green;
+  }
 }
 
 @media (min-width: 375px) {
@@ -83,33 +334,41 @@
   }
 
   .select-dropdown {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    right: 11px;
-    top: 5px;
-
-    border-radius: 15px;
     width: 295px;
     height: 216px;
+
+    position: absolute;
+    z-index: 1000;
+    top: 5px;
+    right: 12px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: baseline;
+
+    overflow-y: auto;
+
+    border-radius: 15px;
     border: 1px solid #ced4da;
     background: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .select-dropdown-mob {
+    width: 143px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
-    right: 11px;
+    position: absolute;
+    z-index: 1000;
+    right: 12px;
     top: 5px;
 
     border-radius: 15px;
-    width: 143px;
+
     border: 1px solid #ced4da;
     background: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -138,7 +397,6 @@
     font-size: 14px;
     line-height: 129%;
     letter-spacing: -0.03em;
-    /* background-color: #e9ecef; */
     color: #f6b83d;
   }
 
@@ -253,7 +511,106 @@
 }
 
 @media (min-width: 768px) {
+  .form {
+    padding: 40px 32px 40px 32px;
+    width: 704px;
+    /* height: 378px; */
+  }
+
+  .content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    flex-direction: row;
+  }
+
+  .category-gender {
+    gap: 16px;
+  }
+
+  .select-inputs {
+    padding: 14px 14px 14px 14px;
+    width: 190px;
+    height: 48px;
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .select-inputs-mob {
+    padding: 14px 14px 14px 14px;
+    width: 170px;
+    height: 48px;
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .select-dropdown {
+    width: 190px;
+    height: 216px;
+  }
+
+  .select-dropdown-mob {
+    width: 170px;
+    height: 170px;
+  }
+
+  .select-option {
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .select-option-active {
+    font-size: 16px;
+    line-height: 125%;
+  }
+
+  .checkbox-button {
+    gap: 8px;
+  }
+
+  .checkbox-button label {
+    display: flex;
+    align-items: center;
+
+    padding: 14px;
+    height: 48px;
+
+    font-size: 16px;
+    line-height: 125%;
+  }
 }
 
 @media (min-width: 1280px) {
+  .form {
+    padding: 40px 40px 40px 40px;
+    width: 1216px;
+  }
+
+  .select-inputs-mob {
+    width: 200px;
+  }
+
+  .select-dropdown-mob {
+    width: 200px;
+  }
+
+  .select-dropdown-gender-desctop {
+    width: 190px;
+    height: 170px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 1000;
+    right: 12px;
+    top: 5px;
+
+    border-radius: 15px;
+
+    border: 1px solid #ced4da;
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
 }
