--- a/src/components/SearchField/SearchField.module.css
+++ b/src/components/SearchField/SearchField.module.css
@@ -21,12 +21,42 @@
     border: 1px solid #f6b83d;
   }
 
+  .search-notices {
+    border-radius: 30px;
+    padding: 12px 12px 12px 12px;
+    width: 240px;
+    height: 42px;
+    background: #fff;
+  }
+
+  .search-notices:hover {
+    border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
+  }
+
+  .search-notices::placeholder {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #262626;
+  }
+
   .loop-and-cross {
     position: absolute;
     display: flex;
     gap: 5px;
     left: 80%;
     top: 28%;
+  }
+
+  .loop-and-cross-notices {
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    left: 77%;
+    top: 31%;
   }
 
   .search-icon {
@@ -78,6 +108,11 @@
     background: #fff;
   }
 
+  .search-notices:hover {
+    border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
+  }
+
   .search::placeholder {
     font-family: var(--font-family);
     font-weight: 500;
@@ -98,6 +133,7 @@
 
   .search:hover {
     border: 1px solid #f6b83d;
+    transition: all 0.5s ease;
   }
 
   .loop-and-cross {
@@ -112,7 +148,7 @@
     position: absolute;
     display: flex;
     gap: 5px;
-    left: 82%;
+    left: 80%;
     top: 31%;
   }
 
@@ -182,7 +218,7 @@
     position: absolute;
     display: flex;
     gap: 5px;
-    left: 71%;
+    left: 79%;
     top: 31%;
   }
 
