start make items of notices page and also add box shadow on few elements

--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -21,6 +21,7 @@
     transition-delay: 100ms;
     background: #f9ca6c;
     color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .loginlink-home {
@@ -63,6 +64,7 @@
     transition-delay: 100ms;
     background: #ffe8be;
     color: #f6b83d;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 }
 
