--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -5,6 +5,7 @@
     width: 280px;
     /* height: 378px; */
     background: #fff4df;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .content {
@@ -259,6 +260,7 @@
     width: 335px;
     /* height: 378px; */
     background: #fff4df;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
 
   .content {
