--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -6,6 +6,9 @@
 
 @media (min-width: 375px) {
   .find-pet-section {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
     margin: 50px 20px 88px 20px;
   }
 }
