--- a/src/components/ModalAttention/ModalAttention.module.css
+++ b/src/components/ModalAttention/ModalAttention.module.css
@@ -62,18 +62,18 @@
   .attention-modal-overlay {
     position: fixed;
     top: 0;
-    left: auto;
-    right: 0;
-    bottom: 0;
+    left: 0;
     background-color: rgba(50, 48, 48, 0.75);
     width: 100vw;
     height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .attention-modal-content {
     position: absolute;
-    margin: 50% 20px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
